tests/chainsaw/prevent-bare-pods/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-bare-pod
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
