tests/chainsaw/prevent-bare-pods/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: prevent-bare-pods
spec:
  steps:
  - name: create a bad bare pod without owner
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create a good pod via deployment
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-deployment.yaml
